--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,9 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Project documentation (개발 문서)
+architecture.md
+code_conventions.md
+development_setup.md
+단계별_개발_가이드.md
