--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   intl: ^0.20.2
   get: ^4.6.6
+  shared_preferences: ^2.5.3 # 네이티브 플러그인: Android와 iOS 모두 재빌드 필요
+  uuid: ^4.5.1
+  url_launcher: ^6.3.1 # 네이티브 플러그인: Android와 iOS 모두 재빌드 필요
 
 dev_dependencies:
   flutter_test:
@@ -88,3 +91,8 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+# 플랫폼 호환성 참고사항
+# - 네이티브 플러그인 추가 시 항상 양쪽 플랫폼 테스트 필요
+# - Android/iOS 모두에서 테스트 후 배포할 것
+# - 플러그인 충돌 발생 시 cross_platform_compatibility.md 참조
+# - 플랫폼별 설정은 android_development_guide.md 및 ios_setup.md 참조
