--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -19,6 +19,10 @@ android {
         jvmTarget = JavaVersion.VERSION_1_8
     }
 
+    sourceSets {
+        main.java.srcDirs += 'src/main/kotlin'
+    }
+
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId = "com.example.gps_seach"
@@ -28,17 +32,37 @@ android {
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
+        
+        // .env 파일에서 환경 변수 값 읽기
+        def envFile = new File(project.rootProject.projectDir.parentFile, '.env')
+        def properties = new Properties()
+        if (envFile.exists()) {
+            envFile.withReader('UTF-8') { reader ->
+                def lines = reader.readLines()
+                lines.each { line ->
+                    def keyValue = line.split('=', 2)
+                    if (keyValue.length == 2) {
+                        def key = keyValue[0].trim()
+                        def value = keyValue[1].trim()
+                        properties.put(key, value)
+                    }
+                }
+            }
+        }
+        
+        // Google Maps API 키를 resValue로 정의
+        resValue "string", "google_maps_api_key", properties.getProperty("GOOGLE_MAPS_API_KEY", "")
     }
 
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig = signingConfigs.debug
+            signingConfig signingConfigs.debug
         }
     }
 }
 
 flutter {
-    source = "../.."
+    source "../.."
 }
