--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,12 @@ dependencies:
   shared_preferences: ^2.5.3 # 네이티브 플러그인: Android와 iOS 모두 재빌드 필요
   uuid: ^4.5.1
   url_launcher: ^6.3.1 # 네이티브 플러그인: Android와 iOS 모두 재빌드 필요
+  google_maps_flutter: ^2.5.3 # 구글 맵 표시를 위한 패키지
+  geolocator: ^10.1.1 # 위치 정보 가져오기 위한 패키지
+  flutter_polyline_points: ^2.0.0 # 경로 그리기 위한 패키지
+  geocoding: ^2.2.0 # 주소-좌표 변환을 위한 패키지
+  http: ^1.2.1 # API 요청을 위한 패키지
+  flutter_dotenv: ^5.1.0 # 환경 변수 관리를 위한 패키지
 
 dev_dependencies:
   flutter_test:
@@ -61,10 +67,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  # 환경 변수 파일을 assets에 추가
+  assets:
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
