--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,43 @@
+# # 보호된 긴급 연락처 관련 파일
+# lib/views/emergency_contacts_view.dart linguist-vendored=true
+# lib/services/emergency_contact_service.dart linguist-vendored=true
+# lib/models/emergency_contact_model.dart linguist-vendored=true
+# lib/views/emergency_guide_view.dart linguist-vendored=true 
+
+# # 지도 관련 파일 - 중요: 이 파일들은 병합 과정에서 변경되지 않도록 보호됩니다
+# # 아래 파일들을 수정하면 지도 기능이 작동하지 않을 수 있습니다
+# lib/views/map_view.dart merge=ours linguist-vendored=true
+# lib/services/location_service.dart merge=ours linguist-vendored=true
+# lib/main.dart merge=ours
+
+# # 지도 관련 파일은 diff에서 표시되지 않도록 설정
+# lib/views/map_view.dart -diff
+# lib/services/location_service.dart -diff
+
+# # 응급사항 관련 파일도 diff에서 표시되지 않도록 설정
+# lib/views/emergency_contacts_view.dart -diff
+# lib/services/emergency_contact_service.dart -diff
+# lib/models/emergency_contact_model.dart -diff
+# lib/views/emergency_guide_view.dart -diff 
+
 # 보호된 긴급 연락처 관련 파일
 lib/views/emergency_contacts_view.dart linguist-vendored=true
 lib/services/emergency_contact_service.dart linguist-vendored=true
 lib/models/emergency_contact_model.dart linguist-vendored=true
 lib/views/emergency_guide_view.dart linguist-vendored=true 
+
+# 지도 관련 파일 - 중요: 이 파일들은 병합 과정에서 변경되지 않도록 보호됩니다
+# 아래 파일들을 수정하면 지도 기능이 작동하지 않을 수 있습니다
+lib/views/map_view.dart merge=ours linguist-vendored=true
+lib/services/location_service.dart merge=ours linguist-vendored=true
+lib/main.dart merge=ours
+
+# 지도 관련 파일은 diff에서 표시되지 않도록 설정
+lib/views/map_view.dart -diff
+lib/services/location_service.dart -diff
+
+# 응급사항 관련 파일도 diff에서 표시되지 않도록 설정
+lib/views/emergency_contacts_view.dart -diff
+lib/services/emergency_contact_service.dart -diff
+lib/models/emergency_contact_model.dart -diff
+lib/views/emergency_guide_view.dart -diff 
