오디오 및 볼륨 제어 기능 추가: just_audio 및 volume_controller 패키지를 통합하여 SOS 기능에서 사이렌 소리 재생 및 볼륨 조절 로직 구현. Android 및 iOS 권한 추가, UI 개선으로 사용자 경험 향상.

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -61,5 +61,8 @@
 	<true/>
 	<key>GoogleMapsApiKey</key>
 	<string>$(GOOGLE_MAPS_API_KEY)</string>
+	<!-- 오디오 사용 설명 -->
+	<key>NSMicrophoneUsageDescription</key>
+	<string>SOS 긴급 상황 시 알림음 재생을 위해 사용됩니다.</string>
 </dict>
 </plist>
