--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   geocoding: ^2.2.0 # 주소-좌표 변환을 위한 패키지
   http: ^1.2.1 # API 요청을 위한 패키지
   flutter_dotenv: ^5.1.0 # 환경 변수 관리를 위한 패키지
+  just_audio: ^0.10.2
+  just_audio_background: ^0.0.1-beta.16
+  volume_controller: ^2.0.7 # 시스템 볼륨 제어 패키지
 
 dev_dependencies:
   flutter_test:
@@ -70,6 +73,7 @@ flutter:
   # 환경 변수 파일을 assets에 추가
   assets:
     - .env
+    - assets/mp3/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
